Fix class names, some spacings

--- a/04-lection2/01-histogram/histogram.css
+++ b/04-lection2/01-histogram/histogram.css
@@ -10,31 +10,30 @@
   line-height: 24px;
 }
 
-.histogram__title-and-view-all-container {
+.histogram__row {
   display: flex;
-  height: 27px;
   justify-content: space-between;
 }
 
 .histogram__title {
   margin: 0;
-  align-self: start;
 }
 
-.histogram__view-all {
+.histogram__link {
   margin: 0;
-  align-self: end;
+  padding-top: 3px;
+  text-decoration: none;
   color: var(--primary);
 }
 
 .histogram__total {
-  margin: 6px 0 40px;
+  margin: 6px 0 39px;
   font-size: 20px;
   line-height: 26px;
 }
 
-.histogram__bars-container {
-  height: 60px;
+.histogram__bars {
+  height: 50px;
   display: flex;
   align-items: end;
   gap: 1px;
